--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins&family=Raleway:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chenla&family=Content&family=Great+Vibes&family=Moul&family=Moulpali&family=Poppins&family=Raleway:wght@300;500&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
+  }
+  #selectAmount, .betting>p {
+    font-family: "Moul", sans-serif;
+    scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
+  }
+  .betting>p {
+    font-family: "Content", sans-serif;
+    scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
+  }
+  body {
+    @apply light-mode dark:dark-mode select-none;
+  }
+  input {
+    @apply w-full py-3 outline-none px-5 rounded-full 
+    text-black dark:text-white bg-[rgb(244,246,248)] dark:bg-[#282C34]
+    text-2xl font-medium;
+  }
+  .social-link > a {
+    @apply mx-3 md:mx-5 md:hover:opacity-70;
+  }
+  #selectAmount > p {
+    @apply w-full p-3 text-center cursor-pointer active:scale-150 duration-300;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .dark-mode {
+    @apply bg-[rgb(13,17,23)] text-slate-300;
+  }
+  .light-mode {
+    @apply bg-[rgb(255,255,255)] text-black;
+  }
+  .t-g {
+    @apply inline-block text-transparent bg-clip-text bg-gradient-to-r from-[#4ca5ff] to-[#b673f8];
+  }
+  .t-g2 {
+    @apply inline-block text-transparent bg-clip-text bg-gradient-to-r from-[#0f2027] to-[#2c5364];
+  }
+  .bg-primary {
+    @apply bg-gradient-to-r from-cyan-500 to-blue-500;
+  }
+  .num-pad {
+    @apply max-sm:w-screen max-sm:absolute max-sm:bottom-0 max-sm:left-0 max-sm:h-[70%];
+  }
+  .num-pad > tr > td {
+    @apply p-[30px] text-center transform duration-100 
+    active:scale-150 cursor-pointer text-4xl font-bold;
+  }
+  .dropHistory {
+    @apply w-full h-full rounded-none top-0 z-10;
+  }
+  .betting {
+    @apply text-center text-lg p-1 bg-[#F4F6F8] dark:bg-[#161B22] rounded-full mt-1;
+  }
+  button {
+    @apply active:scale-150 duration-100 w-8;
+  }
 }
