--- a/src/index.css
+++ b/src/index.css
@@ -7,33 +7,20 @@
 
 @layer base {
   html {
-    font-family: "Poppins", sans-serif;
-    scroll-behavior: smooth;
-    -webkit-tap-highlight-color: transparent;
-  }
-  #selectAmount, .betting>p {
-    font-family: "Moul", sans-serif;
-    scroll-behavior: smooth;
-    -webkit-tap-highlight-color: transparent;
-  }
-  .betting>p {
     font-family: "Content", sans-serif;
+    scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
+  }
+  h1 {
+    font-family: "Moul", sans-serif;
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
   }
   body {
     @apply light-mode dark:dark-mode select-none;
   }
-  input {
-    @apply w-full py-3 outline-none px-5 rounded-full 
-    text-black dark:text-white bg-[rgb(244,246,248)] dark:bg-[#282C34]
-    text-2xl font-medium;
-  }
   .social-link > a {
     @apply mx-3 md:mx-5 md:hover:opacity-70;
-  }
-  #selectAmount > p {
-    @apply w-full p-3 text-center cursor-pointer active:scale-150 duration-300;
   }
 }
 
@@ -52,19 +39,6 @@
   }
   .bg-primary {
     @apply bg-gradient-to-r from-cyan-500 to-blue-500;
-  }
-  .num-pad {
-    @apply max-sm:w-screen max-sm:absolute max-sm:bottom-0 max-sm:left-0 max-sm:h-[70%];
-  }
-  .num-pad > tr > td {
-    @apply p-[30px] text-center transform duration-100 
-    active:scale-150 cursor-pointer text-4xl font-bold;
-  }
-  .dropHistory {
-    @apply w-full h-full rounded-none top-0 z-10;
-  }
-  .betting {
-    @apply text-center text-lg p-1 bg-[#F4F6F8] dark:bg-[#161B22] rounded-full mt-1;
   }
   button {
     @apply active:scale-150 duration-100 w-8;
