Added zodiac signs

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins&family=Raleway:wght@300;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Chenla&family=Content&family=Great+Vibes&family=Moul&family=Moulpali&family=Poppins&family=Raleway:wght@300;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Angkor&family=Battambang&family=Bayon&family=Bokor&family=Chenla&family=Content&family=Dangrek&family=Fasthand&family=Freehand&family=Great+Vibes&family=Hanuman&family=Khmer&family=Koh+Santepheap&family=Koulen&family=Metal&family=Moul&family=Moulpali&family=Nokora&family=Odor+Mean+Chey&family=Poppins&family=Preahvihear&family=Raleway:wght@300;500&family=Siemreap&family=Suwannaphum&family=Taprom&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,12 +6,12 @@
 
 @layer base {
   html {
-    font-family: "Content", sans-serif;
+    font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
   }
   h1 {
-    font-family: "Moul", sans-serif;
+    font-family: "Moulpali", sans-serif;
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
   }
